# resume-tailor

./: .env.example  .gitignore  README.md  agent.py  api.py  cover_letter.typ  dev.sh  engine.py  main.py  models.py  pyproject.toml  requirements.txt  run.sh  template.typ
data/: job_description.example.txt  master_resume.example.json
frontend/: tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: ErrorAlert.tsx  JobDescription.tsx  ResultsDisplay.tsx  ResumeUpload.tsx  TailorButton.tsx
frontend/src/types/: resume.ts
