[project]
name = "resume-tailor"
version = "0.1.0"
description = "CLI agent that tailors resumes to job descriptions with a guaranteed 1-page PDF output."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "pydantic>=2.0.0",
    "pypdf>=4.0.0",
    "typst>=0.13.0",
    "instructor>=1.0.0",
    "anthropic>=0.40.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.6.0"]

[project.scripts]
resume-tailor = "main:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "models", "engine", "agent"]
